Changed some config files

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: "Yoyoyo, this is bboyhao"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,25 +15,15 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>不积跬步，无以至千里<br>
+    不积小流，无以成江海</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>大家好，我是<strong>吴昊(bboyhao)</strong>，目前还是一名大学生，在新加坡NTU读CS专业。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
+    <p>至于我为什么叫自己bboyhao，那是因为曾经大一的时候加入过学校的breaking社团。经过一年的练习，由于学业的原因（主要是因为breaking太难了。。。），后来就退出舞林了。虽然以后不再跳舞了，但还是很喜欢这种culture，所以起个名字纪念一下曾经练舞的时光。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我从<a href="https://github.com/qiubaiying/qiubaiying.github.io">BY的Blog repo</a> fork出来的，非常方便，有兴趣的同学可以到他的博客看一看。</p>
 
-    <p></p>
-    
-    <h5>Talks</h5>
-
-    <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul>
 </div>
 
 <!-- English Version -->
