--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "路漫漫其修远兮，吾将上下而求索"
 ---
 
 {% for post in paginator.posts %}
